[package]
name = "lecture"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main_demo"
path = "src/main_demo.rs"

[dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Regular expressions
regex = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Advanced concurrency
crossbeam = "0.8"

# Data parallelism
rayon = "1.0"

# Structured logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Traditional logging
log = "0.4"
env_logger = "0.10"

# Extended iterators
itertools = "0.12"

# Lazy static initialization
once_cell = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Temporary files
tempfile = "3.0"

# Bit flags
bitflags = "2.0"

# High-performance synchronization
parking_lot = "0.12"
