[package]
name = "lecture"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main_demo"
path = "src/main_demo.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
crossbeam = "0.8"
rayon = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.10"
itertools = "0.12"
once_cell = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
bitflags = "2.0"
parking_lot = "0.12"
